Update footer section

--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -78,8 +78,8 @@
     }
 }
 
-/* Section Header */
-.section__header {
+/* Skills Header */
+.skill__header {
     text-align: center;
     margin-bottom: 70px;
     position: relative;
@@ -109,7 +109,7 @@
 #skill .skill__container {
     position: relative;
     max-width: 1400px;
-    height: 650px;
+    height: 600px;
     margin: 0 auto;
     padding: 0 40px;
     z-index: 1;
