--- a/src/ui/SkillCard/SkillCard.css
+++ b/src/ui/SkillCard/SkillCard.css
@@ -2,7 +2,6 @@
     display: none;
 }
 
-/* Individual skill bubbles - 3D effect */
 .skill__details {
     position: absolute;
     width: 85px;
@@ -96,35 +95,35 @@
     display: none;
 }
 
-/* Better spaced random scattered positions - 3-4 rows, no overlap */
-.skill__details:nth-child(1) { top: 8%; left: 0%; animation-delay: 0s; }
-.skill__details:nth-child(2) { top: 12%; left: 11%; animation-delay: 0.5s; }
-.skill__details:nth-child(3) { top: 5%; left: 24%; animation-delay: 1s; }
-.skill__details:nth-child(4) { top: 15%; left: 36%; animation-delay: 1.5s; }
-.skill__details:nth-child(5) { top: 10%; left: 49%; animation-delay: 2s; }
-.skill__details:nth-child(6) { top: 6%; left: 62%; animation-delay: 2.5s; }
-.skill__details:nth-child(7) { top: 14%; left: 74%; animation-delay: 3s; }
-.skill__details:nth-child(8) { top: 9%; left: 87%; animation-delay: 3.5s; }
-.skill__details:nth-child(9) { top: 35%; left: 3%; animation-delay: 4s; }
-.skill__details:nth-child(10) { top: 38%; left: 16%; animation-delay: 4.5s; }
-.skill__details:nth-child(11) { top: 32%; left: 29%; animation-delay: 5s; }
-.skill__details:nth-child(12) { top: 40%; left: 42%; animation-delay: 5.5s; }
-.skill__details:nth-child(13) { top: 36%; left: 55%; animation-delay: 0.8s; }
-.skill__details:nth-child(14) { top: 42%; left: 68%; animation-delay: 1.3s; }
-.skill__details:nth-child(15) { top: 34%; left: 81%; animation-delay: 1.8s; }
-.skill__details:nth-child(16) { top: 62%; left: 1%; animation-delay: 2.3s; }
-.skill__details:nth-child(17) { top: 58%; left: 14%; animation-delay: 2.8s; }
-.skill__details:nth-child(18) { top: 65%; left: 27%; animation-delay: 3.3s; }
-.skill__details:nth-child(19) { top: 60%; left: 40%; animation-delay: 3.8s; }
-.skill__details:nth-child(20) { top: 67%; left: 53%; animation-delay: 4.3s; }
-.skill__details:nth-child(21) { top: 63%; left: 66%; animation-delay: 4.8s; }
-.skill__details:nth-child(22) { top: 59%; left: 79%; animation-delay: 5.3s; }
-.skill__details:nth-child(23) { top: 64%; left: 92%; animation-delay: 5.8s; }
-.skill__details:nth-child(24) { top: 85%; left: 21%; animation-delay: 0.3s; }
-.skill__details:nth-child(25) { top: 90%; left: 36%; animation-delay: 1.1s; }
-.skill__details:nth-child(26) { top: 86%; left: 51%; animation-delay: 1.6s; }
-.skill__details:nth-child(27) { top: 92%; left: 66%; animation-delay: 2.1s; }
-.skill__details:nth-child(28) { top: 88%; left: 81%; animation-delay: 2.6s; }
+/* Better spaced random scattered positions - more evenly distributed */
+.skill__details:nth-child(1) { top: 10%; left: 10%; animation-delay: 0s; }
+.skill__details:nth-child(2) { top: 18%; left: 21%; animation-delay: 0.5s; }
+.skill__details:nth-child(3) { top: 5%; left: 32%; animation-delay: 1s; }
+.skill__details:nth-child(4) { top: 22%; left: 43%; animation-delay: 1.5s; }
+.skill__details:nth-child(5) { top: 12%; left: 54%; animation-delay: 2s; }
+.skill__details:nth-child(6) { top: 8%; left: 70%; animation-delay: 2.5s; }
+.skill__details:nth-child(7) { top: 16%; left: 82%; animation-delay: 3s; }
+.skill__details:nth-child(8) { top: 39%; left: 80%; animation-delay: 3.5s; }
+.skill__details:nth-child(9) { top: 38%; left: 13%; animation-delay: 4s; }
+.skill__details:nth-child(10) { top: 48%; left: 22%; animation-delay: 4.5s; }
+.skill__details:nth-child(11) { top: 35%; left: 30%; animation-delay: 5s; }
+.skill__details:nth-child(12) { top: 46%; left: 41%; animation-delay: 5.5s; }
+.skill__details:nth-child(13) { top: 40%; left: 56%; animation-delay: 0.8s; }
+.skill__details:nth-child(14) { top: 37%; left: 67%; animation-delay: 1.3s; }
+.skill__details:nth-child(15) { top: 58%; left: 72%; animation-delay: 1.8s; }
+.skill__details:nth-child(16) { top: 65%; left: 6%; animation-delay: 2.3s; }
+.skill__details:nth-child(17) { top: 80%; left: 17%; animation-delay: 2.8s; }
+.skill__details:nth-child(18) { top: 68%; left: 28%; animation-delay: 3.3s; }
+.skill__details:nth-child(19) { top: 73%; left: 39%; animation-delay: 3.8s; }
+.skill__details:nth-child(20) { top: 78%; left: 50%; animation-delay: 4.3s; }
+.skill__details:nth-child(21) { top: 64%; left: 61%; animation-delay: 4.8s; }
+.skill__details:nth-child(22) { top: 82%; left: 67%; animation-delay: 5.3s; }
+.skill__details:nth-child(23) { top: 69%; left: 86%; animation-delay: 5.8s; }
+.skill__details:nth-child(24) { top: 88%; left: 25%; animation-delay: 0.3s; }
+.skill__details:nth-child(25) { top: 92%; left: 39%; animation-delay: 1.1s; }
+.skill__details:nth-child(26) { top: 86%; left: 53%; animation-delay: 1.6s; }
+.skill__details:nth-child(27) { top: 90%; left: 67%; animation-delay: 2.1s; }
+.skill__details:nth-child(28) { top: 94%; left: 81%; animation-delay: 2.6s; }
 
 @keyframes bubbleFloat {
     0%, 100% {
